# inventarr

./: .gitignore  DEVELOPMENT.md  compose.yml  dev.md
be/: Dockerfile  pyproject.toml
be/app/: db.py  main.py  start.py
be/app/equipment/: crud.py  models.py  views.py
be/app/helpers/: crud_helpers.py
