[tool.poetry]
name = "inventarr-be"
version = "0.1.0"
description = "backend for Inventarr, an inventory management tool"
authors = ["Matthew Hellmer <theprankmonkey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
pymongo = "^4.6.1"
uvicorn = {extras = ["standard"], version = "^0.25.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.start:run"
